@startuml

abstract class Subject {
    + request()
}

class Proxy {
    - realSubject: RealSuject
    + preRequest()
    + request()
    + postRequest()
}

class RealSubject {
    + request()
}

class Client {
    
}

Subject <... Client
Subject <|-- Proxy
Subject <|-- RealSubject
RealSubject <-- Proxy

@enduml
